--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -7,13 +7,10 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
-
   <style>
     @import url("../CSS/Main.css");
     @import url("../CSS/style.css");
   </style>
-
-  <script src="../JS/auth.js" defer></script>
 </head>
 
 <body class="headerandfooter">
@@ -22,22 +19,23 @@
     <div class="logo"><img src="../images/logo.png" alt="Logo" class="logoimg"> Ramadan's Table</div>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-
+        <li><a href="index.html" class="active">Home</a></li>
       </ul>
     </nav>
   </div>
 </header>
 
 <div class="breadcrumb">
-    <a href="index.html">Home</a> › <a href="home.html">Entry Page</a> › Sign-up
-  </div>
+  <a href="index.html">Home</a> › <a href="home.html">Entry Page</a> › Sign-up
+</div>
+
 <main>
   <div class="card">
     <h1>Sign-up</h1>
     <p>All fields are required except profile image.</p>
 
-    <form id="signupForm">
+    <!-- HTML-only redirect to User.html -->
+    <form method="get">
       <label for="fn">First name</label>
       <input type="text" id="fn" name="firstName" required>
 
@@ -52,22 +50,24 @@
 
       <label for="pw">Password</label>
       <input type="password" id="pw" name="password" required>
-      <br>
 
-      <button class="btn btn-primary btn-block" type="submit">Create Account</button>
+      <button class="btn btn-primary btn-block" type="submit" formaction="User.html">
+        Create Account
+      </button>
 
       <div class="form-links">
-        Already have an account? <a href="login.html">Log-in</a><br>
-       
+        Already have an account? <a href="login.html">Log-in</a>
       </div>
     </form>
   </div>
 </main>
 
 <footer>
-            <div class="footer-content">
-                <p class="copy">© 2026 Ramadan's Table · All rights reserved <br> Contact: info@RamadanTable.sa | +966 50 000 0000 </p>
-            </div>
-        </footer>
+  <div class="footer-content">
+    <p class="copy">© 2026 Ramadan's Table · All rights reserved <br>
+      Contact: info@RamadanTable.sa | +966 50 000 0000
+    </p>
+  </div>
+</footer>
 </body>
 </html>
