--- a/HTML/home.html
+++ b/HTML/home.html
@@ -7,49 +7,55 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
-
   <style>
-    @import url("../CSS/style.css"); 
-     @import url("../CSS/Main.css");
+    @import url("../CSS/Main.css");
+    @import url("../CSS/style.css");
   </style>
 </head>
 
 <body class="headerandfooter">
 <header>
   <div class="topnav">
-    <div class="logo"><img src="../images/logo.png" alt="Logo" class="logoimg">Ramadan's Table</div>
+    <div class="logo">
+      <img src="../images/logo.png" alt="Logo" class="logoimg">
+      Ramadan's Table
+    </div>
     <nav>
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
-
       </ul>
     </nav>
   </div>
 </header>
+
 <div class="breadcrumb">
-    <a href="index.html">Home</a> › Entry Page
-  </div>
+  <a href="index.html">Home</a> › Entry Page
+</div>
 
 <main>
   <div class="card">
     <h1>Welcome</h1>
     <p>Choose how you want to enter the system.</p>
-    <div class="btn-row">
-      <a class="btn btn-primary" href="login.html">Log-in</a>
-      <br>
-      <a class="btn btn-primary" href="signup.html">Sign-up</a>
+
+    <!-- Vertical buttons (same look you wanted, no layout change) -->
+    <div class="btn-stack">
+      <a class="btn btn-primary btn-block" href="login.html">Log-in</a>
+      <a class="btn btn-primary btn-block" href="signup.html">Sign-up</a>
     </div>
 
-    <div class="btn-row">
-      <a class="btn btn-secondary" href="index.html">Back to About</a>
+    <div class="btn-stack" style="margin-top:12px;">
+      <a class="btn btn-secondary btn-block" href="index.html">Back to About</a>
     </div>
   </div>
 </main>
 
-      <footer>
-        <div class="footer-content">
-            <p class="copy">© 2026 Ramadan's Table · All rights reserved <br> Contact: info@RamadanTable.sa | +966 50 000 0000 </p>
-          </div>
-      </footer>
+<footer>
+  <div class="footer-content">
+    <p class="copy">
+      © 2026 Ramadan's Table · All rights reserved <br>
+      Contact: info@RamadanTable.sa | +966 50 000 0000
+    </p>
+  </div>
+</footer>
 </body>
 </html>
