--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,70 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
-        <style>
-            @import url("../CSS/Main.css");
-                @import url("../CSS/style.css");
-</style>
-        <title>Ramadan's Table</title>
+  <style>
+    @import url("../CSS/Main.css");
+    @import url("../CSS/style.css");
+  </style>
 
+  <title>Ramadan's Table</title>
+</head>
 
-    </head>
-
-    <body class="headerandfooter">
-        <header>
-<div class="topnav">
-    <div class="logo"> <img src="../images/logo.png" alt="" class="logoimg"> Ramadan's Table</div>
+<body class="headerandfooter">
+<header>
+  <div class="topnav">
+    <div class="logo">
+      <img src="../images/logo.png" alt="Logo" class="logoimg">
+      Ramadan's Table
     </div>
-        </header>
-
-
-
-
+  </div>
+</header>
 
 <main>
-<div class="card">
-<h1>Ramadan's Table</h1>
-<p><em>Where recipes meet tradition.</em></p>
-
-<p>
-Ramadan's Table is a recipe-sharing platform designed especially for Ramadan.
-It brings together traditional and modern dishes in one place, making it easier
-for families and individuals to plan their Iftar and Suhoor meals.
-</p>
-
-<br>
-
-<h3>What You Can Do</h3>
-
-<ul>
-  <li>Browse recipes shared by other users</li>
-  <li>View recipes by category such as main dishes, desserts, and appetizers</li>
-  <li>Like and favourite recipes you enjoy</li>
-  <li>Create and manage your own recipe collection</li>
-</ul>
-
   <div class="card">
-<h2>Get Started</h2>
+    <h1>Ramadan's Table</h1>
+    <p><em>Where recipes meet tradition.</em></p>
 
-<p>
-To explore the platform, you can log in or create a new account.
-</p>
+    <p>
+      Ramadan's Table is a recipe-sharing platform designed especially for Ramadan.
+      It brings together traditional and modern dishes in one place, making it easier
+      for families and individuals to plan their Iftar and Suhoor meals.
+    </p>
 
-<a href="home.html" class="btn btn-primary">Go to Entry Page</a>
-</div>
+    <h3>What You Can Do</h3>
+    <ul>
+      <li>Browse recipes shared by other users</li>
+      <li>View recipes by category such as main dishes, desserts, and appetizers</li>
+      <li>Like and favourite recipes you enjoy</li>
+      <li>Create and manage your own recipe collection</li>
+    </ul>
 
-
+    <div class="section">
+      <h2>Get Started</h2>
+      <p>To explore the platform, you can log in or create a new account.</p>
+      <a href="home.html" class="btn btn-primary btn-block">Go to Entry Page</a>
+    </div>
   </div>
 </main>
- <footer>
-            <div class="footer-content">
-                <p class="copy">© 2026 Ramadan's Table · All rights reserved <br> Contact: info@RamadanTable.sa | +966 50 000 0000 </p>
-            </div>
-        </footer>
-    </body>
+
+<footer>
+  <div class="footer-content">
+    <p class="copy">© 2026 Ramadan's Table · All rights reserved <br>
+      Contact: info@RamadanTable.sa | +966 50 000 0000
+    </p>
+  </div>
+</footer>
+</body>
 </html>
