--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -30,14 +30,14 @@
 
 
     <div class="AdminTop">
-        <span class="WelcomeAdmin">Welcome Sara!</span>
+        <span class="WelcomeAdmin">Welcome Hessa!</span>
     </div>
 
 
     <div class="AdminCard">
         <h2>My Information</h2>
-        <p><strong>Name:</strong> Sara Alswailem</p>
-        <p><strong>Email address:</strong> admin@gmail.com</p>
+        <p><strong>Name:</strong> Hessa Yousef</p>
+        <p><strong>Email address:</strong> hessaadmin@gmail.com</p>
     </div>
 
 
@@ -92,7 +92,7 @@
     <div class="AdminCard">
         <h2>Blocked Users List</h2>
 
-        <table class="RecipeTable">
+        <table class="RecipeTable BlockedTable">
             <tr>
                 <th>Name</th>
                 <th>Email Address</th>
