--- a/HTML/ViewRecipe.html
+++ b/HTML/ViewRecipe.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>View Recipe - Oat Soup</title>
 
-  <link rel="stylesheet" href="../CSS/ViewRecipe.css">
+  
   <link rel="stylesheet" href="../CSS/Main.css">
+  <link rel="stylesheet" href="../CSS/ViewRecipe.css">
 </head>
 
 <body class="ViewRecipePage">
@@ -32,7 +33,6 @@
 
   <main>
 
-    <!-- buttons on top (NOT functional in this phase) -->
     <div class="TopButtons">
       <button type="button" class="TopBtn">★ Favourite</button>
       <button type="button" class="TopBtn">♥ Like</button>
@@ -47,11 +47,11 @@
 
     <div class="Card">
       <h2>Recipe Creator</h2>
-      <div class="CreatorRow">
+      <div class="CreatorPart">
         <img src="../images/ChefAhmed.jpg" alt="Creator Image" class="CreatorImg">
         <div class="CreatorInfo">
           <h3>Chef Ahmed</h3>
-          <p class="MutedText">Healthy Ramadan Recipes</p>
+          <p class="Description">Healthy Ramadan Recipes</p>
         </div>
       </div>
     </div>
@@ -69,12 +69,23 @@
     <div class="Card">
       <h2>Ingredients</h2>
       <ul class="IngredientList">
-        <li><span>Oats</span> <span class="Qty">1 cup</span></li>
-        <li><span>Water / broth</span> <span class="Qty">3 cups</span></li>
-        <li><span>Milk</span> <span class="Qty">1 cup</span></li>
-        <li><span>Onion (chopped)</span> <span class="Qty">1 small</span></li>
-        <li><span>Salt</span> <span class="Qty">1 tsp</span></li>
-        <li><span>Black pepper</span> <span class="Qty">½ tsp</span></li>
+     <li><span>Rolled oats</span> <span class="Qty">1 cup</span></li>
+<li><span>Minced chicken (or beef)</span> <span class="Qty">250g</span></li>
+<li><span>Chicken broth</span> <span class="Qty">5 cups</span></li>
+<li><span>Tomato paste</span> <span class="Qty">1 tablespoon</span></li>
+<li><span>Onion (finely chopped)</span> <span class="Qty">1 medium</span></li>
+<li><span>Garlic (minced)</span> <span class="Qty">2 cloves</span></li>
+<li><span>Carrot (finely diced)</span> <span class="Qty">1 small</span></li>
+<li><span>Zucchini (small cubes)</span> <span class="Qty">½ cup</span></li>
+<li><span>Olive oil</span> <span class="Qty">1 tablespoon</span></li>
+<li><span>Salt</span> <span class="Qty">1 teaspoon</span></li>
+<li><span>Black pepper</span> <span class="Qty">½ teaspoon</span></li>
+<li><span>Cumin</span> <span class="Qty">½ teaspoon</span></li>
+<li><span>Ground coriander</span> <span class="Qty">½ teaspoon</span></li>
+<li><span>Ground cinnamon</span> <span class="Qty">¼ teaspoon</span></li>
+<li><span>Fresh parsley (chopped)</span> <span class="Qty">2 tablespoons</span></li>
+<li><span>Lemon juice</span> <span class="Qty">1 tablespoon</span></li>
+
       </ul>
     </div>
 
@@ -82,18 +93,26 @@
     <div class="Card">
       <h2>Instructions</h2>
       <ol class="StepsList">
-        <li>Heat the broth in a pot.</li>
-        <li>Add chopped onion and cook for 2–3 minutes.</li>
-        <li>Add oats and stir well.</li>
-        <li>Add milk and simmer on low heat for 10–12 minutes.</li>
-        <li>Season with salt and pepper, then serve warm.</li>
+     <li>Heat olive oil in a large pot over medium heat.</li>
+<li>Add chopped onion and sauté until soft and golden.</li>
+<li>Add minced garlic and cook for 30 seconds.</li>
+<li>Add minced chicken and cook until fully browned.</li>
+<li>Add tomato paste and stir for 1 minute.</li>
+<li>Add diced carrot and zucchini and mix well.</li>
+<li>Add oats and stir for 1–2 minutes.</li>
+<li>Pour in the chicken broth and bring to a boil.</li>
+<li>Reduce heat and let it simmer for 15–20 minutes.</li>
+<li>Add salt, black pepper, cumin, coriander, and cinnamon.</li>
+<li>Simmer for another 5 minutes until thick and creamy.</li>
+<li>Add lemon juice and garnish with fresh parsley before serving.</li>
+
       </ol>
     </div>
 
   
     <div class="Card">
       <h2>Video</h2>
-      <a class="RecipeURL" href="https://www.youtube.com/" target="_blank">Watch on YouTube</a>
+      <a class="RecipeURL" href="https://youtu.be/UHRNVTMgI5M?si=SAui-STYGr3x__7M" target="_blank">Watch Recipe Tutorial on YouTube</a>
     </div>
 
 
@@ -101,7 +120,7 @@
     <div class="Card">
       <div class="CommentsHeader">
         <h2>Comments</h2>
-        <button type="button" id="OpenComment" class="AddCommentBtn">+ Add Comment</button>
+        <button type="button" id="AddComment" class="AddCommentBtn">+ Add Comment</button>
       </div>
 
       <div id="CommentsList">
@@ -109,7 +128,7 @@
         <div class="CommentBox">
           <div class="CommentTop">
             <strong>Reem</strong>
-            <span class="MutedText">2 hours ago</span>
+            <span class="Description">2 hours ago</span>
           </div>
           <p>This looks delicious 😍</p>
         </div>
@@ -117,9 +136,9 @@
         <div class="CommentBox">
           <div class="CommentTop">
             <strong>Haya</strong>
-            <span class="MutedText">Yesterday</span>
+            <span class="Description">Yesterday</span>
           </div>
-          <p>I love easy recipes like this.</p>
+          <p>Will be making this for Ramadan.</p>
         </div>
       </div>
     </div>
