--- a/HTML/AddRecipe.html
+++ b/HTML/AddRecipe.html
@@ -42,7 +42,7 @@
 
     <label for="Category">Category:</label><br>
     <select id="Category" name="Category" required>
-        <option value="" disabled selected hidden>Select a recipe</option>
+        <option value="" disabled selected hidden>Select a Category</option>
         <option value="Iftar">Iftar</option>
         <option value="Suhoor">Suhoor</option>
         <option value="Snack">Snack</option>
